<resources>
    <string name="app_name">占卜APP</string>
    <string name="get_score">看看我今天的運氣</string>
    <string name="name">姓名：</string>
    <string name="name_hint">請輸入姓名</string>
    <string name="sex">性別：</string>
    <string name="spn_sex_list_promt">請選擇性別</string>
    <string name="spn_year_list_promt">請選擇出生年份（洋歷）</string>
    <string name="spn_month_list_promt">請選擇出生月份</string>
    <string name="spn_day_list_promt">請選擇出生日期</string>
    <string name="spn_hour_list_promt">請選擇出生時辰</string>
    <string name="spn_min_list_promt">你是在幾分出生的？</string>
    <string name="age">年齡：</string>
    <string name="age_hint">請輸入你的年紀</string>
    <string name="btnOK">確定</string>
    <string name="birth">生辰八字：</string>
    <string name="birth_year">年</string>
    <string name="birth_month">月</string>
    <string name="birth_day">日</string>
    <string name="birth_hour">時</string>
    <string name="birth_min">分</string>
    <string name="music">音樂</string>
    <string name="sing">唱歌</string>
    <string name="dance">跳舞</string>
    <string name="travel">旅行</string>
    <string name="reading">閱讀</string>
    <string name="writing">寫作</string>
    <string name="climbing">爬山</string>
    <string name="swim">游泳</string>
    <string name="eating">美食</string>
    <string name="drawing">繪畫</string>
    <string name="hobbies">興趣：</string>
    <string name="get_lot">獲得籤詩</string>
    <string-array name="sex_list">
        <item>男性</item>
        <item>女性</item>
    </string-array>
    <string-array name="min_list">
        <item>未知</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>00</item>
    </string-array>
    <string-array name="hour_list">
        <item>0 子</item>
        <item>1 丑</item>
        <item>2 丑</item>
        <item>3 寅</item>
        <item>4 寅</item>
        <item>5 卯</item>
        <item>6 卯</item>
        <item>7 辰</item>
        <item>8 辰</item>
        <item>9 巳</item>
        <item>10 巳</item>
        <item>11 午</item>
        <item>12 午</item>
        <item>13 未</item>
        <item>14 未</item>
        <item>15 申</item>
        <item>16 申</item>
        <item>17 酉</item>
        <item>18 酉</item>
        <item>19 戌</item>
        <item>20 戌</item>
        <item>21 亥</item>
        <item>22 亥</item>
        <item>23 子</item>
    </string-array>
    <string-array name="day_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year_list">
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2000</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>
    <string name="user_back">返回</string>


    <string name="prompt_title">和電腦擲骰子</string>
    <string name="prompt_play">驚世巨作，為您呈現</string>
    <string name="btn_draw_dice">投擲骰子</string>
    <string name="btn_show_result">顯示結果</string>
</resources>
